paramatize 4 - was this actually a really bad idea?